2024-09-29T01:14:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11088470444 # 433
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 172 238 / 178 244
* notice: next accum: outdated-unq outdated-all / unq all: 175 241 / 178 244
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-14] / []

2024-09-19T01:06:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932589525 # 423
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-19
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 172 238 / 177 243
* notice: next accum: outdated-unq outdated-all / unq all: 172 238 / 178 244
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-18]

2024-09-18T01:05:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10913661764 # 422
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-18
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 172 238 / 176 242
* notice: next accum: outdated-unq outdated-all / unq all: 172 238 / 177 243
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-17]

2024-09-16T01:10:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875930218 # 420